--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^6.5.0",
+    "@socket.io/cluster-adapter": "^0.2.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-rate-limit": "^7.5.0",
     "jsonwebtoken": "^9.0.2",
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "prisma": "^6.5.0"
